--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h1>Welcome to Github class</h1>
+    <h2>THis is the heading 2 Tag</h2>
 
     <script src="app.js"></script>
 </body>
