added the .gitignore and p tag to index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <h1>Welcome to Github class</h1>
     <h2>THis is the heading 2 Tag</h2>
+    <p>I have index.html, style.css, app.js, readme.md, .env and .gitignore as my files on this project</p>
 
     <script src="app.js"></script>
 </body>
